Fix style issues in DFG Phase classes https://bugs.webkit.org/show_bug.cgi?id=78983

Reviewed by Ryosuke Niwa.

* dfg/DFGArithNodeFlagsInferencePhase.cpp:
* dfg/DFGCFAPhase.cpp:
* dfg/DFGCSEPhase.cpp:
* dfg/DFGPredictionPropagationPhase.cpp:
* dfg/DFGVirtualRegisterAllocationPhase.cpp:
Add a space before the colon in class declarations.

Canonical link: https://commits.webkit.org/96007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108180 268f45cc-cd09-0410-ab3c-d52691b4dbfc